--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,30 +1,37 @@
 .container {
   position: absolute;
-  bottom: 10%;
+  bottom: 0%;
   top: 10%;
-  left: 10%;
-  right: 10%;
-  text-align: center;
-  
+  left: 0%;
+  right: 0%;  
 }
 
 .bar {
-  position: relative;
-  width: 6px;
   display: inline-block;
-  margin: 0 3px;
   vertical-align: middle;
-  border-radius: 4px;
 }
 
 body{
   background-color: navajowhite;
-  #background-color: indigo;
   text-align: center;
 }
 
 .menu {
+  position: absolute;
   height: 10%;
   width: 100%;
   background-color: black;
+}
+
+.btn {
+  width: 200px;
+  height: 100%;
+  font-size: 18px;
+  text-align: center;
+  color: white;
+  background-color: transparent;
+  border: none;
+  outline-color: transparent;
+  text-shadow: 2px 2px 8px cyan;
+  cursor: pointer;
 }
