--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -26,7 +26,7 @@ body{
 .btn {
   width: 20%;
   height: 100%;
-  font-size: 18px;
+  font-size: 100%;
   text-align: center;
   color: white;
   background-color: transparent;
