--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -12,7 +12,7 @@
 }
 
 body{
-  background-color: navajowhite;
+  background-color: pink;
   text-align: center;
 }
 
@@ -32,6 +32,6 @@ body{
   background-color: transparent;
   border: none;
   outline-color: transparent;
-  text-shadow: 2px 2px 8px cyan;
+  text-shadow: 1px 1px 4px pink;
   cursor: pointer;
 }
